--- a/Kaplieva_lab7_2.vcxproj.filters
+++ b/Kaplieva_lab7_2.vcxproj.filters
@@ -34,5 +34,8 @@
     <Text Include="file.txt">
       <Filter>Файлы ресурсов</Filter>
     </Text>
+    <Text Include="output.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
   </ItemGroup>
 </Project>
